# my-architecture

./: AGENTS.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml  train_distributed_tp.py  train_mini_tpu.py  train_nano.py  validate_cpu.py  xla_rules.md
configs/: 1B_config.yaml  default.yaml  full_config_example.yaml  medium_650m.yaml  nano.yaml  small_model_config.yaml  test_gc.yaml
src/: __init__.py
src/data/: __init__.py  hf_loader.py  synthetic.py  tokenizer.py
src/model/: __init__.py  act.py  config.py  controller.py  dpsn_r.py  pool.py
src/utils/: config_loader.py  debug_tracer.py
tests/: __init__.py  test_model.py
