[project]
name = "dpsn-r"
version = "0.1.0"
description = "Dynamic Parameter Selection Network with Recurrent Reasoning - TPU optimized"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
tpu = [
    "torch_xla>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]  # N812: Allow F alias for torch.nn.functional (PyTorch convention)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
